--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -25,13 +25,15 @@
         </button>
       </div>
       <div class="flex flex-1 items-center justify-center sm:items-stretch sm:justify-start">
-        <div class="flex flex-shrink-0 items-center text-yellow-300 font-bold">
-          <%= link_to "Trainwreck", root_path %>
-        </div>
+        <%= link_to root_path, class: "flex flex-shrink-0 items-center" do %>
+          <%= image_tag("train.png", size: "28", class: "mr-2") %>
+          <span class="text-yellow-300 font-bold text-xl uppercase">Trainwreck</span>
+        <% end %>
         <div class="hidden sm:ml-6 sm:block">
           <div class="flex space-x-4">
             <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
-            <%= link_to "Articles", articles_path, class: "bg-gray-900 text-white rounded-md px-3 py-2 text-sm font-medium" %>
+            <%= link_to "Trains", trains_path, class: "text-white hover:bg-gray-700 rounded-md px-3 py-2 text-sm font-medium" %>
+            <%= link_to "About Us", about_us_path, class: "text-white hover:bg-gray-700 rounded-md px-3 py-2 text-sm font-medium" %>
           </div>
         </div>
       </div>
@@ -64,14 +66,14 @@
               From: "transform opacity-100 scale-100"
               To: "transform opacity-0 scale-95"
           -->
-<!--          <div class="absolute right-0 z-10 mt-2 w-48 origin-top-right rounded-md bg-white py-1 shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none" role="menu" aria-orientation="vertical" aria-labelledby="user-menu-button" tabindex="-1">-->
-            <!-- Active: "bg-gray-100", Not Active: "" -->
-<!--            <a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1" id="user-menu-item-0">Your-->
-<!--              Profile</a>-->
-<!--            <a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1" id="user-menu-item-1">Settings</a>-->
-<!--            <a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1" id="user-menu-item-2">Sign-->
-<!--              out</a>-->
-<!--          </div>-->
+          <!--          <div class="absolute right-0 z-10 mt-2 w-48 origin-top-right rounded-md bg-white py-1 shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none" role="menu" aria-orientation="vertical" aria-labelledby="user-menu-button" tabindex="-1">-->
+          <!-- Active: "bg-gray-100", Not Active: "" -->
+          <!--            <a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1" id="user-menu-item-0">Your-->
+          <!--              Profile</a>-->
+          <!--            <a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1" id="user-menu-item-1">Settings</a>-->
+          <!--            <a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1" id="user-menu-item-2">Sign-->
+          <!--              out</a>-->
+          <!--          </div>-->
         </div>
       </div>
     </div>
@@ -81,7 +83,7 @@
   <div class="sm:hidden" id="mobile-menu">
     <div class="space-y-1 px-2 pb-3 pt-2">
       <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
-      <%= link_to "Articles", articles_path, class: "text-gray-300 hover:bg-gray-700 hover:text-white block rounded-md px-3 py-2 text-base font-medium" %>
+      <%= link_to "Trains", trains_path, class: "text-gray-300 hover:bg-gray-700 hover:text-white block rounded-md px-3 py-2 text-base font-medium" %>
     </div>
   </div>
 </nav>
