added hero page and more optimizations

--- a/app/views/trains/_train.html.erb
+++ b/app/views/trains/_train.html.erb
@@ -1,5 +1,5 @@
 <div id="<%= dom_id train %>">
-  <p class="my-5">
+  <p class="mb-5">
     <strong class="block font-medium mb-1">Name:</strong>
     <%= train.name %>
   </p>
