--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,29 @@
-<h1 class="">
-  You like trains? Well how about if they are wrecked?
-</h1>
+<div class="relative isolate ">
+  <div class="mx-auto max-w-2xl py-3 sm:py-8 lg:py-12">
+    <div class="hidden sm:mb-8 sm:flex sm:justify-center">
+      <div class="relative rounded-full px-3 py-1 text-sm leading-6 text-gray-600 ring-1 ring-gray-900/10 hover:ring-gray-900/20">
+        New features coming soon!
+        <%= link_to about_us_path, class: "font-semibold text-indigo-600" do %>
+          <span class="absolute inset-0" aria-hidden="true"></span>
+          Read more
+          <span aria-hidden="true">&rarr;</span>
+        <% end %>
+      </div>
+    </div>
+    <div class="text-center">
+      <h1 class="text-4xl font-bold tracking-tight text-gray-900 sm:text-6xl">Your one-stop shop for latest train
+        news</h1>
+      <p class="mt-6 text-lg leading-8 text-gray-600">Tired of checking the news waiting for trains to show up? Well
+        don't worry, we've got you covered!</p>
+      <div class="mt-10 flex items-center justify-center gap-x-6">
+        <%= link_to "Get
+          started", trains_path, class: "rounded-md bg-indigo-600 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600" %>
+        <%= link_to about_us_path, class: "text-sm font-semibold leading-6 text-gray-900" do %>
+          Learn more
+          <span aria-hidden="true">→</span>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</div>
+
