--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 
   <body>
     <%= render "home/header" %>
-    <main class="container mx-auto p-5 flex">
+    <main class="container mx-auto p-5">
       <%= yield %>
     </main>
   </body>
