feature page and about us

--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -10,6 +10,7 @@
           <div class="flex space-x-4">
             <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
             <%= link_to "Trains", trains_path, class: "text-white hover:bg-gray-700 rounded-md px-3 py-2 text-sm font-medium" %>
+            <%= link_to "Features", features_path, class: "text-white hover:bg-gray-700 rounded-md px-3 py-2 text-sm font-medium" %>
             <%= link_to "About Us", about_us_path, class: "text-white hover:bg-gray-700 rounded-md px-3 py-2 text-sm font-medium" %>
           </div>
         </div>
