--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,7 +3,7 @@
     <div class="hidden sm:mb-8 sm:flex sm:justify-center">
       <div class="relative rounded-full px-3 py-1 text-sm leading-6 text-gray-600 ring-1 ring-gray-900/10 hover:ring-gray-900/20">
         New features coming soon!
-        <%= link_to about_us_path, class: "font-semibold text-indigo-600" do %>
+        <%= link_to features_path, class: "font-semibold text-indigo-600" do %>
           <span class="absolute inset-0" aria-hidden="true"></span>
           Read more
           <span aria-hidden="true">&rarr;</span>
@@ -11,7 +11,7 @@
       </div>
     </div>
     <div class="text-center">
-      <h1 class="text-4xl font-bold tracking-tight text-gray-900 sm:text-6xl">Your one-stop shop for latest train
+      <h1 class="text-4xl font-bold tracking-tight text-gray-900 sm:text-6xl">Your one-stop shop for the latest train
         news</h1>
       <p class="mt-6 text-lg leading-8 text-gray-600">Tired of checking the news waiting for trains to show up? Well
         don't worry, we've got you covered!</p>
