form validation for train name

--- a/app/views/trains/_train.html.erb
+++ b/app/views/trains/_train.html.erb
@@ -1,4 +1,4 @@
-<div id="<%= dom_id train %>">
+<div id="<%= dom_id train %>" class="p-5">
   <p class="mb-5">
     <strong class="block font-medium mb-1">Name:</strong>
     <%= train.name %>
