--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,11 @@
   <body>
     <%= render "home/header" %>
     <main class="container mx-auto">
+      <% if notice.present? %>
+        <div class="w-full flex mt-3">
+          <p class="mx-auto py-2 px-3 bg-green-50 text-green-500 font-medium rounded-lg inline-block" id="notice"><%= notice %></p>
+        </div>
+      <% end %>
       <%= yield %>
     </main>
   </body>
