--- a/app/views/devise/shared/_error_messages.html.erb
+++ b/app/views/devise/shared/_error_messages.html.erb
@@ -1,6 +1,6 @@
 <% if resource.errors.any? %>
   <div id="error_explanation" data-turbo-cache="false" class="w-full flex mt-3">
-    <div class="mx-auto py-2 px-3 bg-green-50 text-green-500 font-medium rounded-lg inline-block">
+    <div class="mx-auto py-2 px-3 bg-white text-red-500 font-medium rounded-lg inline-block">
       <h2>
         <%= I18n.t("errors.messages.not_saved",
                    count: resource.errors.count,
