--- a/app/views/trains/_form.html.erb
+++ b/app/views/trains/_form.html.erb
@@ -1,6 +1,6 @@
 <%= form_with(model: train, class: "contents") do |form| %>
   <% if train.errors.any? %>
-    <div id="error_explanation" class="bg-red-50 text-red-500 px-3 py-2 font-medium rounded-lg mt-3">
+    <div id="error_explanation" class="bg-white text-red-600 px-3 py-2 font-medium rounded-lg mt-3">
       <h2><%= pluralize(train.errors.count, "error") %> prohibited this train from being saved:</h2>
 
       <ul>
