--- a/app/views/trains/index.html.erb
+++ b/app/views/trains/index.html.erb
@@ -1,4 +1,4 @@
-<div class="w-full p-5">
+<div class="w-full relative isolate px-6 pt-20 lg:px-8">
   <% content_for :title, "Trains" %>
 
   <div class="flex justify-between items-center ">
