--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,4 @@
-<div class="relative isolate ">
+<div class="relative isolate px-6 pt-14 lg:px-8">
   <div class="mx-auto max-w-2xl py-3 sm:py-8 lg:py-12">
     <div class="hidden sm:mb-8 sm:flex sm:justify-center">
       <div class="relative rounded-full px-3 py-1 text-sm leading-6 text-gray-600 ring-1 ring-gray-900/10 hover:ring-gray-900/20">
