--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,8 +1,10 @@
 <%= render "devise/shared/error_messages", resource: resource %>
 
 <div class="flex min-h-full flex-col justify-center px-6 py-12 lg:px-8">
-    <div class="sm:mx-auto sm:w-full sm:max-w-sm">
-    <%= image_tag("train.png", class: "mx-auto h-12 w-auto", alt: "Train Logo") %>
+  <div class="sm:mx-auto sm:w-full sm:max-w-sm">
+    <%= link_to root_path do %>
+      <%= image_tag("train.png", class: "mx-auto h-12 w-auto", alt: "Train Logo") %>
+    <% end %>
     <h2 class="mt-10 text-center text-2xl font-bold leading-9 tracking-tight text-gray-900">Create an Account</h2>
   </div>
 
