--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,5 @@
 <div class="relative isolate px-6 pt-14 lg:px-8">
-  <div class="mx-auto max-w-2xl py-3 sm:py-8 lg:py-12">
+  <div class="mx-auto max-w-2xl py-16 sm:py-8 lg:py-12">
     <div class="hidden sm:mb-8 sm:flex sm:justify-center">
       <div class="relative rounded-full px-3 py-1 text-sm leading-6 text-gray-600 ring-1 ring-gray-900/10 hover:ring-gray-900/20">
         New features coming soon!
@@ -13,7 +13,7 @@
     <div class="text-center">
       <h1 class="text-4xl font-bold tracking-tight text-gray-900 sm:text-6xl">Your one-stop shop for the latest train
         news</h1>
-      <p class="mt-6 text-lg leading-8 text-gray-600">Tired of checking the news waiting for trains to show up? Well
+      <p class="mt-6 text-base sm:text-lg leading-8 text-gray-600">Tired of checking the news waiting for trains to show up? Well
         don't worry, we've got you covered!</p>
       <div class="mt-10 flex items-center justify-center gap-x-6">
         <%= link_to "Get
