--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -1,4 +1,5 @@
-<header class="absolute inset-x-0 top-0 z-50">
+<header class="absolute inset-x-0 top-0 z-50" data-controller="slide-over"
+        data-action="keydown.esc->slide-over#hide">
   <nav class="flex items-center justify-between p-6 lg:px-8" aria-label="Global">
     <div class="flex lg:flex-1">
       <%= link_to root_path, class: "flex flex-shrink-0 items-center" do %>
@@ -7,9 +8,10 @@
       <% end %>
     </div>
     <div class="flex lg:hidden">
-      <button type="button" class="-m-2.5 inline-flex items-center justify-center rounded-md p-2.5 text-gray-700" data-controller="dialog-trigger" data-action="dialog-trigger#launch" data-dialog-trigger-target-value="menu-dialog">
+      <button type="button" class="-m-2.5 inline-flex items-center justify-center rounded-md p-2.5 text-gray-700" data-action="slide-over#show">
         <span class="sr-only">Open main menu</span>
-        <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
+
+        <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke=<%= current_page?(about_us_path) ? 'white' : 'black' %> aria-hidden="true">
           <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5"/>
         </svg>
       </button>
@@ -33,13 +35,107 @@
       <% else %>
         <div class="hidden sm:block">
           <%= link_to new_user_registration_path, class: "flex space-x-4 #{current_page?(about_us_path) ? 'text-white' : 'text-gray-900'}" do %>
-            <div class="relative inline cursor-pointer text-base font-medium before:bg-violet-600  before:absolute before:-bottom-1 before:block before:h-[2px] before:w-full before:origin-bottom-right before:scale-x-0 before:transition before:duration-300 before:ease-in-out hover:before:origin-bottom-left hover:before:scale-x-100 leading-6">Sign Up &rarr;</div>
+            <div class="relative inline cursor-pointer text-base font-medium before:bg-violet-600  before:absolute before:-bottom-1 before:block before:h-[2px] before:w-full before:origin-bottom-right before:scale-x-0 before:transition before:duration-300 before:ease-in-out hover:before:origin-bottom-left hover:before:scale-x-100 leading-6">Sign
+              Up &rarr;
+            </div>
           <% end %>
         </div>
       <% end %>
     </div>
   </nav>
   <!-- Mobile menu, show/hide based on menu open state. -->
+  <div>
+    <div
+      data-slide-over-target="container"
+      class="relative z-10 hidden"
+      aria-labelledby="slide-over-title"
+      role="dialog"
+      aria-modal="true"
+    >
+      <div
+        data-slide-over-target="backdrop"
+        class="fixed inset-0 transition-opacity bg-gray-500 bg-opacity-75"
+        data-transition-enter="ease-in-out duration-500"
+        data-transition-enter-start="opacity-0"
+        data-transition-enter-end="opacity-100"
+        data-transition-leave="ease-in-out duration-500"
+        data-transition-leave-start="opacity-100"
+        data-transition-leave-end="opacity-0"
+      ></div>
+
+      <div class="fixed inset-0 overflow-hidden">
+        <div class="absolute inset-0 overflow-hidden">
+          <div
+            class="fixed inset-y-0 right-0 flex max-w-full pl-10 pointer-events-none"
+          >
+            <div
+              data-slide-over-target="panel"
+              class="relative w-screen max-w-md pointer-events-auto"
+              data-transition-enter="transform transition ease-in-out duration-500 sm:duration-700"
+              data-transition-enter-start="translate-x-full"
+              data-transition-enter-end="translate-x-0"
+              data-transition-leave="transform transition ease-in-out duration-500 sm:duration-700"
+              data-transition-leave-start="translate-x-0"
+              data-transition-leave-end="translate-x-full"
+            >
+              <div class="fixed inset-y-0 right-0 z-50 w-full overflow-y-auto bg-white px-6 py-6 sm:max-w-sm sm:ring-1 sm:ring-gray-900/10">
+                <div
+                  data-slide-over-target="closeButton"
+                  class="flex items-center justify-between"
+                  data-transition-enter="ease-in-out duration-500"
+                  data-transition-enter-start="opacity-0"
+                  data-transition-enter-end="opacity-100"
+                  data-transition-leave="ease-in-out duration-500"
+                  data-transition-leave-start="opacity-100"
+                  data-transition-leave-end="opacity-0"
+                >
+                  <%= link_to root_path, class: "-m-1.5 p-1.5" do %>
+                    <img class="h-8 w-auto" src="https://tailwindui.com/img/logos/mark.svg?color=indigo&shade=600" alt="">
+                    <span class="sr-only">Trainwreck</span>
+                  <% end %>
+
+                  <button type="button" class="-m-2.5 rounded-md p-2.5 text-gray-700" data-action="slide-over#hide">
+                    <span class="sr-only">Close menu</span>
+                    <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
+                      <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12"/>
+                    </svg>
+                  </button>
+                </div>
+
+                <div class="mt-6 flow-root">
+                  <div class="-my-6 divide-y divide-gray-500/10">
+                    <div class="space-y-2 py-6">
+                      <%= link_to "Trains", trains_path, class: "-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-100 #{current_page?(trains_path) ? 'bg-gray-200' : ''}" %>
+                      <%= link_to "Features", features_path, class: "-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-100 #{current_page?(features_path) ? 'bg-gray-200' : ''}" %>
+                      <%= link_to "About Us", about_us_path, class: "-mx-3 block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-100 #{current_page?(about_us_path) ? 'bg-gray-200' : ''}" %>
+                    </div>
+                    <div class="py-6">
+                      <% if user_signed_in? %>
+                        <div class="relative ml-3">
+                          <div>
+                            <button type="button" class="relative flex rounded-full bg-gray-800 text-sm focus:outline-none focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-gray-800" id="user-menu-button" aria-expanded="false" aria-haspopup="true">
+                              <span class="absolute -inset-1.5"></span>
+                              <span class="sr-only">Open user menu</span>
+                              <img class="h-8 w-8 rounded-full" src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80" alt="">
+                            </button>
+                          </div>
+                        </div>
+                      <% else %>
+                        <div class="hidden sm:block">
+                          <%= link_to "Sign Up", new_user_registration_path, class: "-mx-3 block rounded-lg px-3 py-2.5 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50" %>
+                        </div>
+                      <% end %>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <div class="hidden" role="dialog" aria-modal="true" id="menu-dialog" data-controller="dialog" data-action="keyup@document->dialog#escClose">
     <!-- Background backdrop, show/hide based on slide-over state. -->
     <div class="fixed inset-0 z-50"></div>
