--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,6 @@
-<%= render "devise/shared/error_messages", resource: resource %>
-
 <div class="flex min-h-full flex-col justify-center px-6 py-12 lg:px-8">
+  <%= render "devise/shared/error_messages", resource: resource %>
+
   <div class="sm:mx-auto sm:w-full sm:max-w-sm">
     <%= link_to root_path do %>
       <%= image_tag("train.png", class: "mx-auto h-12 w-auto", alt: "Train Logo") %>
@@ -31,7 +31,7 @@
         </div>
 
         <div class="field">
-          <label for="password_confirmation" class="block text-sm font-medium leading-6 text-gray-900">Password</label>
+          <label for="password_confirmation" class="block text-sm font-medium leading-6 text-gray-900">Confirm Password</label>
           <div class="mt-2">
             <%= f.password_field :password_confirmation, autocomplete: "new-password", required: true, class: "block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" %>
           </div>
