--- a/app/views/trains/new.html.erb
+++ b/app/views/trains/new.html.erb
@@ -1,4 +1,4 @@
-<div class="mx-auto md:w-2/3 w-full">
+<div class="mx-auto md:w-2/3 w-full pt-20">
   <h1 class="font-bold text-4xl">New train</h1>
 
   <%= render "form", train: @train %>
